force-app/main/default/objects/PBS_AAAP_RLP__c/PBS_AAAP_RLP__c.object-meta.xml
<CustomObject>
    <description>AAAP - This object contains information related to Solicitations for Offer (RLPs)</description>
    <label>RLP</label>
    <nameField>
        <displayFormat>RLP-{000000}</displayFormat>
        <label>RLP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RLPs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>