force-app/main/default/objects/PBS_AAAP_RLP__c/fields/BSAC_for_Continuing_Space_per_ABOA_SF__c.field-meta.xml
<CustomField>
    <fullName>BSAC_for_Continuing_Space_per_ABOA_SF__c</fullName>
    <defaultValue>12</defaultValue>
    <inlineHelpText>Total Estimated BSAC Amount / ABOA SF. Not an Annual Rate.</inlineHelpText>
    <label>BSAC for Continuing Space per ABOA SF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>