force-app/main/default/objects/PBS_AAAP_RLP__c/fields/Cloned_Date__c.field-meta.xml
<CustomField>
    <fullName>Cloned_Date__c</fullName>
    <label>Cloned Date</label>
    <type>DateTime</type>
</CustomField>