force-app/main/default/objects/PBS_AAAP_RLP__c/fields/Default_Start_Time_AM_PM__c.field-meta.xml
<CustomField>
    <fullName>Default_Start_Time_AM_PM__c</fullName>
    <label>Default Start Time AM/PM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AM</fullName>
                <default>true</default>
                <label>AM</label>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>