force-app/main/default/objects/PBS_AAAP_RLP__c/fields/No_of_times_cloned__c.field-meta.xml
<CustomField>
    <fullName>No_of_times_cloned__c</fullName>
    <label>No. of times cloned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>