force-app/main/default/objects/PBS_AAAP_RLP__c/fields/PBS_AAAP_Allow_10_5_Term__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Allow_10_5_Term__c</fullName>
    <defaultValue>true</defaultValue>
    <description>RLP can allow offers with 10 year term with 5 firm.</description>
    <inlineHelpText>RLP can allow offers with 10 year term with 5 firm.</inlineHelpText>
    <label>Allow 10,5 Lease Term</label>
    <type>Checkbox</type>
</CustomField>