force-app/main/default/objects/PBS_AAAP_RLP__c/fields/PBS_AAAP_ALLOW_TIER2_AMMORT__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_ALLOW_TIER2_AMMORT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow Offeror to give Second Tier TI Amortization rate different from First Tier TI amortization rate.</description>
    <inlineHelpText>Allow Offeror to give Second Tier TI Amortization rate different from First Tier TI amortization rate.</inlineHelpText>
    <label>Allow Second Tier Amortization Rate</label>
    <type>Checkbox</type>
</CustomField>