force-app/main/default/objects/PBS_AAAP_RLP__c/fields/PBS_AAAP_BSAC_per_ABOA__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_BSAC_per_ABOA__c</fullName>
    <defaultValue>12</defaultValue>
    <description>RITM0021675, RITM002167, RITM0021677</description>
    <inlineHelpText>Total Estimated BSAC Amount / ABOA SF. Not an Annual Rate.</inlineHelpText>
    <label>BSAC for New Space per ABOA SF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>