force-app/main/default/objects/PBS_AAAP_RLP__c/fields/PBS_AAAP_Canceled_Reason__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Canceled_Reason__c</fullName>
    <label>Canceled Reason</label>
    <type>TextArea</type>
</CustomField>