force-app/main/default/objects/PBS_AAAP_RLP__c/fields/PBS_AAAP_Category__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Office</fullName>
                <default>true</default>
                <label>Office</label>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>