force-app/main/default/objects/PBS_AAAP_RLP__c/fields/PBS_AAAP_Discount_percent_Rate__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Discount_percent_Rate__c</fullName>
    <description>Discount percent Rate %</description>
    <inlineHelpText>Discount percent Rate %</inlineHelpText>
    <label>Discount percent Rate</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>