force-app/main/default/objects/PBS_AAAP_RLP__c/fields/PBS_AAAP_DISCOUNT_RATE__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_DISCOUNT_RATE__c</fullName>
    <description>Old Discount rate field only to be used internally</description>
    <label>Discount Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>