force-app/main/default/objects/PBS_AAAP_RLP__c/fields/PBS_AAAP_ESCALATION_PRCNT_RATE__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_ESCALATION_PRCNT_RATE__c</fullName>
    <description>New Escalation field to display escalation as a %</description>
    <inlineHelpText>Escalation Rate as a %</inlineHelpText>
    <label>Escalation Percent Rate</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>