force-app/main/default/objects/PBS_AAAP_RLP__c/fields/PBS_AAAP_ESCALATION_RATE_PERCENT__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_ESCALATION_RATE_PERCENT__c</fullName>
    <description>Old escalation rate field, only to be used internally</description>
    <inlineHelpText>Old escalation rate field, only to be used internally</inlineHelpText>
    <label>Escalation Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>