force-app/main/default/objects/PBS_AAAP_RLP__c/fields/PBS_AAAP_EXCEPTION_MONTH_BEGIN__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_EXCEPTION_MONTH_BEGIN__c</fullName>
    <label>Exception Month Begin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>