force-app/main/default/objects/PBS_AAAP_RLP__c/fields/PBS_AAAP_INITIAL_DUE_DATE__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_INITIAL_DUE_DATE__c</fullName>
    <label>Initial Offer Due</label>
    <type>Date</type>
</CustomField>