force-app/main/default/objects/PBS_AAAP_RLP__c/fields/PBS_AAAP_isActive__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>