force-app/main/default/objects/PBS_AAAP_RLP__c/fields/PBS_AAAP_LEGACY_SFO_ID__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_LEGACY_SFO_ID__c</fullName>
    <externalId>true</externalId>
    <label>PBS_AAAP_LEGACY_SFO_ID</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>