force-app/main/default/objects/PBS_AAAP_RLP__c/fields/PBS_AAAP_MAX_TIUSED__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_MAX_TIUSED__c</fullName>
    <inlineHelpText>Maximum TI Allowance for New and Continuing Space / ABOA SF. Established in RLP.</inlineHelpText>
    <label>Max TI for New/Cont Space per ABOA SF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>