force-app/main/default/objects/PBS_AAAP_RLP__c/fields/PBS_AAAP_MOVE_DEFAULT__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_MOVE_DEFAULT__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Total Estimated Physical Move Costs / ABOA SF. Not an Annual Rate.</inlineHelpText>
    <label>Estimated Phys Move Costs per ABOA SF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>