force-app/main/default/objects/PBS_AAAP_RLP__c/fields/PBS_AAAP_PV_OTHER_UPFRONT_COSTS__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_PV_OTHER_UPFRONT_COSTS__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Estimated $/ANSI BOMA ABOA Build out Cost, in excess of the TI for both a new and continuing lease</description>
    <inlineHelpText>Total Estimated Build Out Costs / ABOA SF, in excess of TI. Not an Annual Rate.</inlineHelpText>
    <label>Estimated Build Out Over TI per ABOA SF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>