force-app/main/default/objects/PBS_AAAP_RLP__c/fields/PBS_AAAP_Region__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Region__c</fullName>
    <label>RLP Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Region 1</fullName>
            </value>
            <value>
                <fullName>Region 2</fullName>
            </value>
            <value>
                <fullName>Region 3</fullName>
            </value>
            <value>
                <fullName>Region 4</fullName>
            </value>
            <value>
                <fullName>Region 5</fullName>
            </value>
            <value>
                <fullName>Region 6</fullName>
            </value>
            <value>
                <fullName>Region 7</fullName>
            </value>
            <value>
                <fullName>Region 8</fullName>
            </value>
            <value>
                <fullName>Region 9</fullName>
            </value>
            <value>
                <fullName>Region 10</fullName>
            </value>
            <value>
                <fullName>Region 11</fullName>
            </value>
            <value>
                <fullName>National Capital Region</fullName>
            </value>
            <value>
                <fullName>10/5 Term - All Regions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>