force-app/main/default/objects/PBS_AAAP_RLP__c/fields/PBS_AAAP_STATUS__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_STATUS__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Replaced</fullName>
            </value>
            <value>
                <fullName>Posted/Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>