force-app/main/default/objects/PBS_AAAP_RLP__c/fields/PBS_AAAP_Status_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Status_Change_Date__c</fullName>
    <label>Status Change Date</label>
    <type>Date</type>
</CustomField>