force-app/main/default/objects/PBS_AAAP_RLP__c/fields/PBS_AAAP_TELCOMM_DEFAULT__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_TELCOMM_DEFAULT__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Help Button - Total Estimated Telecom Cost / ABOA SF. Not an Annual Rate.</description>
    <inlineHelpText>Total Estimated Telecom Cost / ABOA SF. Not an Annual Rate.</inlineHelpText>
    <label>Estimated Telecom Cost per ABOA SF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>