force-app/main/default/objects/PBS_AAAP_RLP__c/fields/PBS_AAAP_TIUSED_FOR_FIRM_TERM_NEW__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_TIUSED_FOR_FIRM_TERM_NEW__c</fullName>
    <inlineHelpText>Total Estimated TI Allowance for New Space / ABOA SF. Not an amortized annual rate.</inlineHelpText>
    <label>Min TI for New Space per ABOA SF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>