force-app/main/default/objects/PBS_AAAP_RLP__c/fields/PBS_RSAP_Broker__c.field-meta.xml
<CustomField>
    <fullName>PBS_RSAP_Broker__c</fullName>
    <description>RSAP Project Broker email from GREX</description>
    <inlineHelpText>RSAP Project Broker email from GREX</inlineHelpText>
    <label>RSAP GSA Broker Email</label>
    <length>35</length>
    <type>Text</type>
</CustomField>