force-app/main/default/objects/PBS_AAAP_RLP__c/fields/PBS_RSAP_City__c.field-meta.xml
<CustomField>
    <fullName>PBS_RSAP_City__c</fullName>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>