force-app/main/default/objects/PBS_AAAP_RLP__c/fields/PBS_RSAP_Lease_Contracting_Officer__c.field-meta.xml
<CustomField>
    <fullName>PBS_RSAP_Lease_Contracting_Officer__c</fullName>
    <description>RSAP GSA Project Lease Contracting Officer from GREX</description>
    <inlineHelpText>RSAP GSA Project Lease Contracting Officer from GREX</inlineHelpText>
    <label>RSAP GSA Lease Contracting Officer Email</label>
    <length>35</length>
    <type>Text</type>
</CustomField>