force-app/main/default/objects/PBS_AAAP_RLP__c/fields/PBS_RSAP_Leasing_Specialist__c.field-meta.xml
<CustomField>
    <fullName>PBS_RSAP_Leasing_Specialist__c</fullName>
    <description>RSAP GSA Project Leasing Specialist from GREX</description>
    <inlineHelpText>RSAP GSA Project Leasing Specialist from GREX</inlineHelpText>
    <label>RSAP GSA Leasing Specialist Email</label>
    <length>35</length>
    <type>Text</type>
</CustomField>