force-app/main/default/objects/PBS_AAAP_RLP__c/fields/PBS_RSAP_Project_Number__c.field-meta.xml
<CustomField>
    <fullName>PBS_RSAP_Project_Number__c</fullName>
    <label>Project Number</label>
    <length>7</length>
    <type>Text</type>
</CustomField>