force-app/main/default/objects/PBS_AAAP_RLP__c/fields/PBS_RSAP_Solicitation_G_REX_ID__c.field-meta.xml
<CustomField>
    <fullName>PBS_RSAP_Solicitation_G_REX_ID__c</fullName>
    <externalId>true</externalId>
    <label>Solicitation/G-REX ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>