force-app/main/default/objects/PBS_AAAP_RLP__c/fields/PBS_RSAP_Solicitation_Number__c.field-meta.xml
<CustomField>
    <fullName>PBS_RSAP_Solicitation_Number__c</fullName>
    <label>Solicitation Number</label>
    <length>128</length>
    <type>Text</type>
</CustomField>