force-app/main/default/objects/PBS_AAAP_RLP__c/fields/PBS_RSAP_Solicitation_Status__c.field-meta.xml
<CustomField>
    <fullName>PBS_RSAP_Solicitation_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solicitation Status</label>
    <type>Checkbox</type>
</CustomField>