force-app/main/default/objects/PBS_AAAP_RLP__c/fields/PBS_RSAP_State__c.field-meta.xml
<CustomField>
    <fullName>PBS_RSAP_State__c</fullName>
    <label>State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>