force-app/main/default/objects/PBS_AAAP_RLP__c/fields/Replaced_RLP__c.field-meta.xml
<CustomField>
    <fullName>Replaced_RLP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Replaced RLP filed lookup</description>
    <label>Replaced RLP</label>
    <referenceTo>PBS_AAAP_RLP__c</referenceTo>
    <relationshipLabel>RLPs</relationshipLabel>
    <relationshipName>RLPs</relationshipName>
    <type>Lookup</type>
</CustomField>