force-app/main/default/objects/PBS_AAAP_RLP__c/fields/RLP_NAME__c.field-meta.xml
<CustomField>
    <fullName>RLP_NAME__c</fullName>
    <formula>If(OR($Profile.Name == &apos;AAAP Customer Portal&apos;, $Profile.Name == &apos;Leasing Profile&apos;, $Profile.Name == &apos;GSA RET Community Plus Login User&apos;), Name,  HYPERLINK(&apos;/&apos; &amp; Id, Name) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RLP NAME</label>
    <type>Text</type>
</CustomField>