force-app/main/default/objects/PBS_AAAP_RLP__c/fields/RLP_Replaced_By__c.field-meta.xml
<CustomField>
    <fullName>RLP_Replaced_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RLP Replaced By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RLPs</relationshipName>
    <type>Lookup</type>
</CustomField>