force-app/main/default/objects/PBS_AAAP_RLP__c/fields/RLPExternalID__c.field-meta.xml
<CustomField>
    <fullName>RLPExternalID__c</fullName>
    <externalId>true</externalId>
    <label>RLPExternalID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>