force-app/main/default/objects/PBS_AAAP_RLP__c/recordTypes/AAAP.recordType-meta.xml
<RecordType>
    <fullName>AAAP</fullName>
    <active>true</active>
    <label>AAAP</label>
</RecordType>