force-app/main/default/objects/PBS_AAAP_RLP__c/recordTypes/PBS_RSAP.recordType-meta.xml
<RecordType>
    <fullName>PBS_RSAP</fullName>
    <active>true</active>
    <label>RSAP</label>
</RecordType>