force-app/main/default/objects/PBS_AAAP_RLP__c/validationRules/Canceled_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Canceled_Date</fullName>
    <active>true</active>
    <description>Canceled Date required when RLP status &quot;changed to Canceled&quot;.</description>
    <errorConditionFormula>ISPICKVAL(PBS_AAAP_STATUS__c , &apos;Canceled&apos;) &amp;&amp;  ISNULL(PBS_AAAP_Canceled_Date__c)</errorConditionFormula>
    <errorDisplayField>PBS_AAAP_Canceled_Date__c</errorDisplayField>
    <errorMessage>Canceled Date is required on Canceled Status.</errorMessage>
</ValidationRule>